implement command-line interface for MovieToolApplication